--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="./assets/favicon/favicon-48x48.png" sizes="48x48" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/favicon/favicon-48x48.png"
+      sizes="48x48"
+    />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon/favicon.svg" />
     <link rel="shortcut icon" href="./assets/favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-touch-icon.png"
+    />
     <meta name="apple-mobile-web-app-title" content="PADO" />
     <link rel="manifest" href="./assets/favicon/site.webmanifest" />
     <link
@@ -263,7 +272,7 @@
 
           <div class="menu__item pages">
             <div class="pages__item">
-              <a href="./">Home </a>
+              <button id="theme-toggle"><em></em> Theme</button>
             </div>
 
             <div class="pages__item">
@@ -342,7 +351,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -384,7 +393,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -426,7 +435,7 @@
             class="mix mapping__item"
             data-project="9"
             data-link="./newflavorsoftea/1-1-cjh-c/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -468,7 +477,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -510,7 +519,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -552,7 +561,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -594,7 +603,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -636,7 +645,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -678,7 +687,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -720,7 +729,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -762,7 +771,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -804,7 +813,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -846,7 +855,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -888,7 +897,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -930,7 +939,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -972,7 +981,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1014,7 +1023,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1056,7 +1065,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1098,7 +1107,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1140,7 +1149,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1182,7 +1191,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1224,7 +1233,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1266,7 +1275,7 @@
             class="mix mapping__item"
             data-project="8"
             data-link="./newflavorsoftea/1-1-cjh-p/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1308,7 +1317,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1350,7 +1359,7 @@
             class="mix mapping__item"
             data-project="7"
             data-link="./newflavorsoftea/1-1-cjh-t/"
-            data-dominantcolor-hex="#ADD8E6"
+            data-dominantcolor-hex="#B39E5D"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1394,7 +1403,7 @@
             class="mix mapping__item"
             data-project="6"
             data-link="./newflavorsoftea/1-1-hwk-c/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1436,7 +1445,7 @@
             class="mix mapping__item"
             data-project="5"
             data-link="./newflavorsoftea/1-1-hwk-p/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1478,7 +1487,7 @@
             class="mix mapping__item"
             data-project="5"
             data-link="./newflavorsoftea/1-1-hwk-p/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1520,7 +1529,7 @@
             class="mix mapping__item"
             data-project="5"
             data-link="./newflavorsoftea/1-1-hwk-p/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1562,7 +1571,7 @@
             class="mix mapping__item"
             data-project="4"
             data-link="./newflavorsoftea/1-1-hwk-t/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1603,7 +1612,7 @@
             class="mix mapping__item"
             data-project="4"
             data-link="./newflavorsoftea/1-1-hwk-t/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1645,7 +1654,7 @@
             class="mix mapping__item"
             data-project="4"
             data-link="./newflavorsoftea/1-1-hwk-t/"
-            data-dominantcolor-hex="#D5D3D2"
+            data-dominantcolor-hex="#67818A"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1688,7 +1697,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1730,7 +1739,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1771,7 +1780,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1812,7 +1821,7 @@
             class="mix mapping__item"
             data-project="3"
             data-link="./newflavorsoftea/1-1-kjh-c/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1854,7 +1863,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1896,7 +1905,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1938,7 +1947,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -1980,7 +1989,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2022,7 +2031,7 @@
             class="mix mapping__item"
             data-project="2"
             data-link="./newflavorsoftea/1-1-kjh-p/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2064,7 +2073,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#dfdfdf"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2106,7 +2115,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2148,7 +2157,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2190,7 +2199,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2232,7 +2241,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2274,7 +2283,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2315,7 +2324,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
@@ -2356,7 +2365,7 @@
             class="mix mapping__item"
             data-project="1"
             data-link="./newflavorsoftea/1-1-kjh-t/"
-            data-dominantcolor-hex="#D3C6A0"
+            data-dominantcolor-hex="#65615E"
           >
             <div class="item__wrapper">
               <div class="item__img__wrapper">
