--- a/newflavorsoftea/1-1-kjh-t/index.html
+++ b/newflavorsoftea/1-1-kjh-t/index.html
@@ -257,8 +257,8 @@
           </div>
 
           <div class="menu__item pages">
-            <div class="pages__item">
-              <a href="../../">Home </a>
+               <div class="pages__item">
+              <button id="theme-toggle"><em></em> Theme</button>
             </div>
 
             <div class="pages__item">
@@ -328,7 +328,7 @@
               <div class="slideshow__gallery">
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t001_1.jpg"
@@ -347,7 +347,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t001_2.jpg"
@@ -366,7 +366,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t001_3.jpg"
@@ -385,7 +385,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t002_1.jpg"
@@ -404,7 +404,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t002_2.jpg"
@@ -423,7 +423,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t002_3.jpg"
@@ -442,7 +442,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t003_1.jpg"
@@ -461,7 +461,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t003_2.jpg"
@@ -480,7 +480,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t003_3.jpg"
@@ -499,7 +499,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t003_4.jpg"
@@ -518,7 +518,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t003_5.jpg"
@@ -537,7 +537,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t003_6.jpg"
@@ -556,7 +556,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t004_1.jpg"
@@ -575,7 +575,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t004_2.jpg"
@@ -594,7 +594,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t004_3.jpg"
@@ -613,7 +613,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t004_4.jpg"
@@ -632,7 +632,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t005_1.jpg"
@@ -651,7 +651,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t005_2.jpg"
@@ -670,7 +670,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t005_3.jpg"
@@ -689,7 +689,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t005_4.jpg"
@@ -708,7 +708,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t006_1.jpg"
@@ -727,7 +727,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t006_2.jpg"
@@ -746,7 +746,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t006_3.jpg"
@@ -765,7 +765,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t007_1.jpg"
@@ -784,7 +784,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t007_2.jpg"
@@ -803,7 +803,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t007_3.jpg"
@@ -822,7 +822,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t007_4.jpg"
@@ -841,7 +841,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t008_1.jpg"
@@ -858,7 +858,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t008_2.jpg"
@@ -875,7 +875,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t008_3.jpg"
@@ -892,7 +892,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#FFC2AE"
+                  data-dominantcolor-hex="#8B634B"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-kjh-t008_4.jpg"
