--- a/newflavorsoftea/1-1-hwk-p/index.html
+++ b/newflavorsoftea/1-1-hwk-p/index.html
@@ -257,8 +257,8 @@
           </div>
 
           <div class="menu__item pages">
-            <div class="pages__item">
-              <a href="../../">Home </a>
+               <div class="pages__item">
+              <button id="theme-toggle"><em></em> Theme</button>
             </div>
 
             <div class="pages__item">
@@ -328,7 +328,7 @@
               <div class="slideshow__gallery">
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_1.jpg"
@@ -347,7 +347,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_2.jpg"
@@ -366,7 +366,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_3.jpg"
@@ -385,7 +385,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_4.jpg"
@@ -404,7 +404,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_5.jpg"
@@ -423,7 +423,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p002_1.jpg"
@@ -442,7 +442,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p002_2.jpg"
@@ -461,7 +461,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p002_3.jpg"
@@ -480,7 +480,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_1.jpg"
@@ -499,7 +499,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_2.jpg"
@@ -518,7 +518,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_3.jpg"
@@ -537,7 +537,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_4.jpg"
@@ -556,7 +556,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#E7E7E7"
+                  data-dominantcolor-hex="#A6A2A0"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p004_1.jpg"
