--- a/newflavorsoftea/1-1-kjh-p/index.html
+++ b/newflavorsoftea/1-1-kjh-p/index.html
@@ -257,8 +257,8 @@
           </div>
 
           <div class="menu__item pages">
-            <div class="pages__item">
-              <a href="../../">Home </a>
+               <div class="pages__item">
+              <button id="theme-toggle"><em></em> Theme</button>
             </div>
 
             <div class="pages__item">
