--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -149,7 +149,9 @@
       <header id="header">
         <div class="header__sitetitle">
           <div class="header__sitetitle__item item--1" data-sort="random">
-            <a href="../" target="_self" rel="noopener noreferrer"><img src="../../assets/img/logo2.svg" /></a>
+            <a href="../" target="_self" rel="noopener noreferrer"
+              ><img src="../../assets/img/logo2.svg"
+            /></a>
           </div>
         </div>
 
@@ -167,7 +169,7 @@
         <div id="swup" class="menu__wrapper" data-swup="0">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -251,7 +253,7 @@
 
           <div class="menu__item pages">
             <div class="pages__item">
-              <a href="../">Home </a>
+              <button id="theme-toggle"><em></em> Theme</button>
             </div>
 
             <div class="pages__item">
@@ -283,8 +285,6 @@
         <div id="general" class="privacy-policy">
           <div class="general__wrapper" style="opacity: 1">
             <h2>준비 중입니다.</h2>
-
-         
           </div>
         </div>
       </main>
