--- a/information/index.html
+++ b/information/index.html
@@ -253,7 +253,7 @@
 
           <div class="menu__item pages">
                <div class="pages__item">
-              <button id="theme-toggle"><em></em> Theme</button>
+              <button id="theme-toggle"><em></em> Toggle theme</button>
             </div>
 
             <div class="pages__item">
