--- a/newflavorsoftea/1-1-cjh-p/index.html
+++ b/newflavorsoftea/1-1-cjh-p/index.html
@@ -167,7 +167,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -257,19 +257,19 @@
           </div>
 
           <div class="menu__item pages">
-               <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
             <div class="pages__item">
               <a href="../../information" class="page--information">
                 Information
               </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="../../legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../../legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
@@ -307,7 +307,7 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               Description
+                Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
@@ -1549,8 +1549,6 @@
                     <p>For brewing and filtering tea leaves</p>
                   </span>
                 </div>
-
-                
 
                 <div class="meta__wrapper">
                   <span>
