--- a/newflavorsoftea/1-1-hwk-p/index.html
+++ b/newflavorsoftea/1-1-hwk-p/index.html
@@ -167,7 +167,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -257,19 +257,19 @@
           </div>
 
           <div class="menu__item pages">
-               <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
             <div class="pages__item">
               <a href="../../information" class="page--information">
                 Information
               </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="../../legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../../legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
@@ -307,7 +307,7 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               Description
+                Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
@@ -328,7 +328,7 @@
               <div class="slideshow__gallery">
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_1.jpg"
@@ -347,7 +347,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_2.jpg"
@@ -366,7 +366,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_3.jpg"
@@ -385,7 +385,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_4.jpg"
@@ -404,7 +404,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p001_5.jpg"
@@ -423,7 +423,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p002_1.jpg"
@@ -442,7 +442,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p002_2.jpg"
@@ -461,7 +461,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p002_3.jpg"
@@ -480,7 +480,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_1.jpg"
@@ -499,7 +499,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_2.jpg"
@@ -518,7 +518,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_3.jpg"
@@ -537,7 +537,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p003_4.jpg"
@@ -556,7 +556,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A6A2A0"
+                  data-dominantcolor-hex="#4E4B49"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-p004_1.jpg"
@@ -663,8 +663,6 @@
                     <p>For brewing and filtering tea leaves</p>
                   </span>
                 </div>
-
-                
 
                 <div class="meta__wrapper">
                   <span>
