--- a/information/index.html
+++ b/information/index.html
@@ -169,7 +169,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -252,17 +252,17 @@
           </div>
 
           <div class="menu__item pages">
-               <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
             <div class="pages__item">
               <a href="./" class="page--information"> Information </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="../legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
