--- a/legal-notice/index.html
+++ b/legal-notice/index.html
@@ -252,19 +252,19 @@
           </div>
 
           <div class="menu__item pages">
-               <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
             <div class="pages__item">
               <a href="../information/" class="page--information">
                 Information
               </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="../legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
@@ -295,7 +295,11 @@
             </p>
 
             <p>
-              Unauthorised copying, using or modifying the content of this website is prohibited. Copyright and laws for the protection of intellectual property apply to all texts, images or multimedia data. Any further use requires the express permission of the copyright holder, the gallery or the artists.
+              Unauthorised copying, using or modifying the content of this
+              website is prohibited. Copyright and laws for the protection of
+              intellectual property apply to all texts, images or multimedia
+              data. Any further use requires the express permission of the
+              copyright holder, the gallery or the artists.
             </p>
 
             <h1>External links</h1>
