--- a/newflavorsoftea/1-1-cjh-t/index.html
+++ b/newflavorsoftea/1-1-cjh-t/index.html
@@ -167,7 +167,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -212,7 +212,7 @@
                 <p>1-1-hwk-C</p>
               </span>
             </a>
-             <a href="../1-1-hwk-p/" class="projectlist__item">
+            <a href="../1-1-hwk-p/" class="projectlist__item">
               <span class="item--projectnumber">02</span>
               <span class="item--projectname">
                 <p>1-1-hwk-P</p>
@@ -246,7 +246,7 @@
             </a>
           </div>
 
-           <div class="header__menutoggle__lang language__item visible ko">
+          <div class="header__menutoggle__lang language__item visible ko">
             <span class="language--active">
               <a href="#" hreflang="ko"> </a>
             </span>
@@ -257,19 +257,19 @@
           </div>
 
           <div class="menu__item pages">
-               <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
             <div class="pages__item">
               <a href="../../information" class="page--information">
                 Information
               </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="../../legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../../legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
@@ -307,7 +307,7 @@
               <div
                 class="projecttoggle__item projecttoggle--information inactive"
               >
-                               Description
+                Description
               </div>
 
               <div class="projecttoggle__item projecttoggle--overview inactive">
@@ -501,8 +501,6 @@
                     <p>For various purposes in the tea ceremony</p>
                   </span>
                 </div>
-
-                
 
                 <div class="meta__wrapper">
                   <span>
