--- a/newflavorsoftea/1-1-hwk-c/index.html
+++ b/newflavorsoftea/1-1-hwk-c/index.html
@@ -167,7 +167,7 @@
         <div id="swup" class="menu__wrapper">
           <div class="menu__item contact">
             <p>
-              The Institute of Object 〈PADO〉              <br />
+              The Institute of Object 〈PADO〉 <br />
               <br />
               In Sansuhwa Teahouse
               <br />
@@ -257,19 +257,19 @@
           </div>
 
           <div class="menu__item pages">
-               <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
             <div class="pages__item">
               <a href="../../information" class="page--information">
                 Information
               </a>
             </div>
 
-            <div class="legal">
+            <div class="pages__item">
+              <a href="../../legal-notice/"> Legal Notice </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../../legal-notice/"> Legal Notice </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
 
               <!-- <div class="pages__item">
@@ -328,7 +328,7 @@
               <div class="slideshow__gallery">
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A0A0A0"
+                  data-dominantcolor-hex="#84733E"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-c001_1.jpg"
@@ -347,7 +347,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A0A0A0"
+                  data-dominantcolor-hex="#84733E"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-c001_2.jpg"
@@ -366,7 +366,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A0A0A0"
+                  data-dominantcolor-hex="#84733E"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-c001_3.jpg"
@@ -385,7 +385,7 @@
                 </div>
                 <div
                   class="slideshow__item hidden"
-                  data-dominantcolor-hex="#A0A0A0"
+                  data-dominantcolor-hex="#84733E"
                 >
                   <img
                     src="https://ik.imagekit.io/11195/sansuhwa/public/1-1-hwk-c001_4.jpg"
@@ -492,8 +492,6 @@
                     <p>For making and sharing a cup of tea</p>
                   </span>
                 </div>
-
-                
 
                 <div class="meta__wrapper">
                   <span>
