--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -253,20 +253,20 @@
 
           <div class="menu__item pages">
             <div class="pages__item">
-              <button id="theme-toggle"><em></em> Toggle theme</button>
-            </div>
-
-            <div class="pages__item">
               <a href="./" class="page--information"> Information </a>
             </div>
 
-            <div class="legal">
-              <div class="pages__item">
-                <a href="../legal-notice/"> Legal Notice </a>
-              </div>
+            <div class="pages__item">
+              <a href="../legal-notice/"> Legal Notice </a>
+            </div>
 
+            <div class="pages__item">
+              <a href="../privacy-policy/"> Privacy Policy </a>
+            </div>
+
+            <div class="menu_bottom">
               <div class="pages__item">
-                <a href="../privacy-policy/"> Privacy Policy </a>
+                <button id="theme-toggle"><em></em> Toggle theme</button>
               </div>
             </div>
           </div>
